# libcrawler

./: .gitignore  MANIFEST.in  README.md  README.txt  build.py  pyproject.toml  requirements.txt
.github/workflows/: pr-validation.yml  publish.yml
src/: __main__.py  crawler.py
src/libcrawler/: __main__.py  libcrawler.py  version.py
src/tests/: test_crawler.py
