[build-system]
# We remove setuptools-scm because the version is now explicitly sourced from your version.py file.
requires = [ "setuptools>=61.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "libcrawler"
description = "A tool to crawl documentation and convert to Markdown."
authors = [
    { name="Robert Collins", email="roberto.tomas.cuentas@gmail.com" }
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]

# This tells the build system that version and dependencies are defined elsewhere.
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["libcrawler.egg_info", "libcrawler.tests"]

# This new section provides the explicit instructions for finding the dynamic fields.
[tool.setuptools.dynamic]
version = {attr = "libcrawler.version.__version__"}
dependencies = {file = ["requirements.txt"]}

[project.scripts]
crawl-docs = "libcrawler.__main__:main"